texting tex commands and script components

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js"></script>
+    <script src="src/mathjax-config.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js"></script>
     <title>Home</title>
   </head>
   <body>
     <p>
-        $$\nabla \times \mathbf{E} = - \frac{\partial \mathbf{B}}{\partial t}$$
+        $$\nabla \times \tv{E} = - \frac{\partial \tv{B}}{\partial t}$$
     </p>
   </body>
 </html>
