adding all time dependant maxwells

--- a/index.html
+++ b/index.html
@@ -8,8 +8,21 @@
     <title>Home</title>
   </head>
   <body>
+    <h2>Faraday's Law</h2>
     <p>
-        $$\nabla \times \tv{E} = - \frac{\partial \tv{B}}{\partial t}$$
+        $$\nabla \times \tv{E} = -\tv{M}_i - \frac{\partial \tv{B}}{\partial t}$$
+    </p>
+    <h2>Ampere's Law</h2>
+    <p>
+        $$\nabla \times \tv{H} = \tv{J}_i + \tv{J}_c + \frac{\partial \tv{D}}{\partial t}$$
+    </p>
+    <h2>Gauss's Law</h2>
+    <p>
+        $$\nabla \cdot \tv{D} = \t{q}_{\text{ev}}$$
+    </p>
+    <h2>Gauss's Law Magnetism</h2>
+    <p>
+        $$\nabla \cdot \tv{B} = \t{q}_{\text{mv}}$$
     </p>
   </body>
 </html>
