updated basic_maxwells with more vector field information

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="styles.css">
-    <script src="src/mathjax-config.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js"></script>
     <title>Nick's Electromagnetic Notes</title>
   </head>
   <body>
-    <a href="pages/basic_maxwells.html">Basic Maxwell's 12/13/2025</a>
+    <ul>
+        <li>
+        <a href="pages/basic_maxwells.html">Maxwell's Equations 12/13/2025</a>:
+        Started 12/13/2025, Updated 12/16/2025.
+        </li>
+    </ul>
   </body>
 </html>
