--- a/pages/basic_maxwells.html
+++ b/pages/basic_maxwells.html
@@ -35,28 +35,48 @@
             \end{equation*}
             Where \(A_x,A_y\) and \(A_z\) are component functions of space and time instead of numbers like in the single vector case.
             A vector with a hat indicates it is a unit vector \(\uv{v}\).
-            For example the unit vectors of the cartesian coordinate system are written as
-            $$
+            For example the unit vectors of the Cartesian coordinate system are written as
+            \begin{equation*}
                 \uv{x}=\begin{bmatrix}1\\0\\0\end{bmatrix}\quad
                 \uv{y}=\begin{bmatrix}0\\1\\0\end{bmatrix}\quad
                 \uv{z}=\begin{bmatrix}0\\0\\1\end{bmatrix}\quad
-            $$
+            \end{equation*}
+            Harmonic time dependence is a mathematical nicety.
+            When it exists in real life, it is usually human created because its so nice mathematically.
+            Harmonic time is a fancy way to say the time varies like cosine or sine.
+            Differential equations with time derivatives can be entirely replaced with algebraic phasors.
+            Certain electromagnetic measurement equipment operates with one frequency at a time (VNA, SNA).
+            The fourier transform can combining several frequencies together to construct arbitrary periotic time dependence.
+            This sort of analysis has build in assumptions like linearity of superposition. 
+            Luckily this is usually how electromagnetic quantities work.
         </p>
         <h3>Quantities and Units</h3>
+        <p>
+            There are several ways to introduce electromagnetic quantities.
+            Introductory electromagnetic books often start with coulombs law, relating it to the electric field.
+            Then introduce how the electric field intensity interacts with materials, effectively introducing electric flux density.
+            The full Lorentz force is then introduced along side the magnetic flux density and so on.
+            This gives an nice picture of each quantity, and attempts to give some intuition about the sources of each quantity.
+            The main draw back of this introductory picture is it often developes bad advanced electromagnetic intuition.
+            Changing electric or magnetic fields induce each other in interesting ways.
+            Often these bad habits have to be unlearned when learning advance electromagnetic.
+            The advanced picture of electromagnetic often leverages units as a hand hold for intuition.
+            Then the differential Maxwell's equations are introduced in arbitrary and time harmonic forms.
+        </p>
         <ul>
             <li>The electric field intensity \(\tv{E}\), \(\frac{\text{V}}{\text{m}}\)</li>
             <li>The magnetic field intensity \(\tv{H}\), \(\frac{\text{A}}{\text{m}}\)</li>
-            <li>The electric flux intensity \(\tv{D}\), \(\frac{\text{C}}{\text{m}^2}\)</li>
-            <li>The magnetic flux intensity \(\tv{B}\), \(\frac{\text{Wb}}{\text{m}^2}\)</li>
+            <li>The electric flux density \(\tv{D}\), \(\frac{\text{C}}{\text{m}^2}\)</li>
+            <li>The magnetic flux density \(\tv{B}\), \(\frac{\text{Wb}}{\text{m}^2}\)</li>
             <li>The source (impressed) electric current density \(\tv{J}_i\), \(\frac{\text{A}}{\text{m}^2}\)</li>
             <li>The electric conduction current density \(\tv{J}_c\), \(\frac{\text{A}}{\text{m}^2}\)</li>
             <li>The source (impressed) magnetic current density \(\tv{M}_i\), \(\frac{\text{V}}{\text{m}^2}\)</li>
             <li>The electric charge density \(\t{q}_{\text{ev}}\), \(\frac{\text{C}}{\text{m}^3}\)</li>
             <li>The magnetic charge density \(\t{q}_{\text{mv}}\), \(\frac{\text{Wb}}{\text{m}^3}\)</li>
         </ul>
-        <h3>Time dependent Maxwell's Equations</h3>
+        <h3>Time dependent Maxwell's Equations in Differential Form</h3>
         <p>
-            Maxwells equations takes the quantities from above and relates them via a set of first order, coupled partial differential equations.
+            Maxwells equations takes the quantities the previous section and relates them via a set of first order, coupled partial differential equations.
             \begin{align}
                 \nabla \times \tv{E} &= -\tv{M}_i - \frac{\partial \tv{B}}{\partial t} \\
                 \nabla \times \tv{H} &= \tv{J}_i + \tv{J}_c + \frac{\partial \tv{D}}{\partial t} \\
@@ -64,22 +84,44 @@
                 \nabla \cdot \tv{B} &= \t{q}_{\text{mv}}
             \end{align}
         </p>
-        <h3>Time harmonic Maxwell's Equations</h3>
+        <h3>Time harmonic Maxwell's Equations in Differential Form</h3>
         <p>
-            The general time dependent Maxwell's equations are often needlessly complex. 
-            General periodic time dependence can be constructed with the Fourier transform.
-            So instead electromagnetic quantities are expressed in a purely spacial dependent form.
-            Where 
-            \begin{equation}
-            \tv{E}=\text{Re}\left[\v{E}(x,y,z)e^{j\omega t}\right]
-            \end{equation}
+            Instead of assuming each vector field depends on time, a purely spacial vector field \(\v{E}(x,y,z)\) is combined with an sinusoidal time dependence to form an arbitrary time dependant quantity.
+            \begin{equation*}
+            \tv{E}(x,y,z;t)=\text{Re}\left[\v{E}(x,y,z)e^{j\omega t}\right]
+            \end{equation*}
+            This assumption (the time harmonic assumption) turns time derivatives into a multiplication by \(j \omega\).
             This simplification leads to the time harmonic Maxwell's equations
             \begin{align}
-                \nabla \times \v{E} &= -\v{M}_i - j \omega \v{B} \\
-                \nabla \times \v{H} &= \v{J}_i + \v{J}_c + j \omega \v{D} \\
-                \nabla \cdot \v{D} &= q_{\text{ev}} \\
+                \nabla \times \v{E} &= -\v{M}_i - j \omega \v{B} & \text{Faraday's Law} \\
+                \nabla \times \v{H} &= \v{J}_i + \v{J}_c + j \omega \v{D} & \text{Ampere's Law} \\
+                \nabla \cdot \v{D} &= q_{\text{ev}} & \text{Gauss's Law} \\
                 \nabla \cdot \v{B} &= q_{\text{mv}}
             \end{align}
+        </p>
+        <h3>Charge Conservation</h3>
+        <p>
+            Charge is conserved, while this can be derived from Maxwells equations it is important enough to state explicitly.
+            Taking the divergence of Ampere's law result in
+            \begin{equation*}
+                \nabla \cdot \left(\nabla \times \v{H}\right) 
+                = \nabla \cdot \v{J}_i + \nabla \cdot \v{J}_c + j \omega \left(\nabla \cdot \v{D}\right)\\
+            \end{equation*}
+            The divergence of the curl of a vector field is zero.
+            This is a good vector identity to prove to yourself.
+            \begin{equation*}
+                \nabla \cdot \v{J}_i + \nabla \cdot \v{J}_c = - j \omega \left(\nabla \cdot \v{D}\right)\\
+            \end{equation*}
+            Using Gauss's law the right hand side of the above equation transforms into the time derivative of charge density.
+            \begin{equation*}
+                \nabla \cdot \tv{J}_{ic} = - \frac{\partial \t{q}_{ev}}{\partial t}
+            \end{equation*}
+        </p>
+        <h3>Wave Equation</h3>
+        <p>
+            Maxwell's equations have to benefit of being coupled partial differential equations.
+            In certain situations they are a simple way to find either the electric and magnetic field.
+            However combining Maxwell's equations into a few uncoupled differential equation is useful as well.
         </p>
     </div>
   </body>
